2009-05-05  Stipe Tolj  <stolj at kannel.org>
    * gw/msg.[ch], gw/msg-decl.h: remove the semicolon references from the 
      macro definition file for the sake or usability of the macro in other
      places. NLC.

2009-05-04 Alexander Malysh <amalysh at kannel.org>
    * aclocal.m4, configure, configure.in, gw-config.h.in, gw/dlr.c,
      gw/dlr_p.h, gwlib/cfg.def, gwlib/dbpool.[ch], doc/userguide/userguide.xml:
      added MSSQL support to DBPool and DLR.
      Thanks to Alejandro Guerrieri <aguerrieri at kannel.org> for this patch.

2009-05-04 Alexander Malysh <amalysh at kannel.org>
    * gw/meta_data.[ch]: Extends meta_data_set_values function to be able to add
      new values without replacing the whole dict.
    * gw/smsc/smsc_smpp.c: return DLR error in dlr_err metadata parameter.
      Thanks to Alejandro Guerrieri <aguerrieri at kannel.org> for this patch.

2009-04-30 Alexander Malysh <amalysh at kannel.org>
    * utils/mtbatch.c: fixed freeze at the shutdown.

2009-04-30 Alexander Malysh <amalysh at kannel.org>
    * utils/mtbatch.c: send the whole message to bearerbox instead of splitted
      parts. Splitting is done in bearerbox.

2009-04-17 Alexander Malysh <amalysh at kannel.org>
    * aclocal.m4, configure, configure.in: fixed FeeBSD compilation options.
      Use -lpthread instead of -lkse. See http://www.FreeBSD.org/kse/.

2009-04-17 Alexander Malysh <amalysh at kannel.org>
    * gwlib/charset.c, gwlib/date.c: fixed compiler warnings.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for pointing
      to it and partially fix.

2009-04-16  Stipe Tolj  <stolj at kannel.org>
    * utils/mtbatch.c: changed email reference. NLC.
    * gwlib/socket.c: re-inforced preamble, which was changed acidently
      in the previous patchset. NLC.

2009-04-15 Alexander Malysh <amalysh at kannel.org> 
    * gwlib/socket.c: implemented support for multi-IP.

2009-04-15 Alexander Malysh <amalysh at kannel.org> 